<resources>
    <string name="app_name">技术储备工程</string>

    <string name="action_settings">Settings</string>
    <string name="android_technical_reserve">安卓技术储备工程</string>
    <string-array name="main_datas">
        <item>多图片选择</item>
        <item>多图片展示</item>
        <item>emoji表情</item>
        <item>广告展示</item>
        <item>keybroad软键盘监听</item>
        <item>WheelView滚轮</item>
        <item>zxing二维码扫描</item>
        <item>XRecyclerView</item>
        <item>Android 余JavaScript交互</item>
        <item>插件化开发</item>
        <item>报表</item>
        <item>图片秒传</item>
        <item>语音识别</item>
        <item>腾讯IM</item>
        <item>多渠道打包</item>
        <item>腾讯互动直播</item>
        <item>第三方支付</item>

    </string-array>
    <string-array name="image_show_datas">
        <item>第一条内容：收到是大放送大放送东方松岛枫松岛枫胜多负少对方水电费施工方规范</item>
        <item>第二条内容：送大放送东方松岛枫收到是大放松岛cx dsfsdf sdf as少对方水电费sa sda sadsa dasd asd asda sda施工方规范</item>
        <item>第三条内容：是大放是第三方士大夫胜多负少但是送大放送东方松岛枫松岛枫胜多负收到少对方水电费施工方规范</item>
        <item>第四条内容：松岛电费施工方规范</item>
        <item>第五条内容：电费施工方规范</item>
        <item>第六条内容：收到是大放送 大放送第三\n方地方第三方但是\n施工方规范</item>
        <item>第七条内容：\n放送大放送东方松\n岛枫松岛枫胜多负少对方水\n电费施工方规范</item>
        <item>第八条内容：送大放送东方松岛\n枫松岛枫胜多负\n少对方水\n电费施工方规范</item>
        <item>第九条内容：撒达到 收到枫胜多负\n少对方哦if但是水\n电费施工方规范</item>
        <item>第十条内容：第三方东方闪电是否是\n枫松岛工方规范</item>


    </string-array>
    <string name="title_activity_muti_image_select">多图片选择</string>
    <string name="title_activity_main2">图片列表展示</string>
    <string name="title_activity_emoji">emoji表情</string>

    <string name="hint">Type emoji here</string>
    <string name="i_love_emojicon">I \ue32d emojicon</string>
    <string name="use_system_default">Use system default emojicon</string>
    <string name="title_activity_ad">广告类</string>
    <string name="title_activity_wheelview">滚轮选择</string>
    <string name="title_activity_keybroad">软键盘监听</string>
    <string name="title_activity_zxing">二维码扫描</string>
    <string name="title_activity_xrecycle">XRecycleView</string>
    <string name="title_activity_js">Android 与 JavaScript交互</string>
    <string name="title_activity_new_web">新web页面</string>
    <string name="title_activity_bingzhuang">饼状图</string>
    <string name="title_activity_zhuzhuang">柱状图</string>
    <string name="title_activity_zhexian">折线图</string>
    <string name="title_activity_baobiao">报表</string>
    <string name="title_activity_fast_upload">文件秒传</string>
    <string name="title_activity_pack">多渠道打包</string>
    <string name="sure">确定</string>
    <string name="cacel">取消</string>
    <string name="weixinFriends">微信好友</string>
    <string name="weixinCircle">朋友圈</string>
    <string name="sina">新浪微博</string>
    <string name="sms">短信</string>
    <string name="info"><b>多渠道打包工具</b>\n\n安卓应用商店（一个商店也叫做一个渠道，如360，baidu，xiaomi）众多，大大小小几百个，我们发布应用之后需要统计各个渠道的用户下载量，所以才有了多渠道打包。\n\n方案1：python脚本打包：具体请看<b>app</b>文件夹下的 <b>多渠道打包.zip， 适用于已经生成的apk中。 \n\n方案2： build配置， 用Android Studio打包，具体build配置请参考build.gradle文件，并且AndroidManifest.xml文件中  Channel ID 改成这样 android:name=\"${UMENG_CHANNEL_VALUE}\"，然后build 签名的apk, 选择所有平台就可以了。\n\n也可以参考 http://www.cnblogs.com/0616--ataozhijia/p/4203997.html</b></string>
    <!--<string name="dabao_url"></string>-->
</resources>
